# VNVita

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  finish.sh  vnvita  vnvita.elf  vnvita.velf  vnvita.vpk  vnvita.vpk_param.sfo
Notes/: Syntax.txt  var lookup.txt
sce_sys/livearea/contents/: template.xml
src/: charviewer.h  codeloader.cpp  codeloader.h  codereader.cpp  codereader.h  common.h  compilemain.cpp  compilemain.h  compiler.h  compilerloader.cpp  compilerloader.h  credits  defines.h  directoryinfo.h  gamemain.cpp  gamemain.h  header.h  imagecontrol.h  instruction.h  instructionparts.h  main.cpp  menupanel.cpp  menupanel.h  novelbrowser.cpp  novelbrowser.h  novelheader.h  novelinfo.cpp  novelinfo.h  novelmain.cpp  novelmain.h  novelparser.cpp  novelparser.h  noveltypes.h  opcode.h  processor.cpp  processor.h  stringhelpers.h  stringloader.h  stringtable.h  stringviewer.h  (+7 more)
src/userinterface/: animatedsprite.cpp  animatedsprite.h  boxbase.cpp  boxbase.h  progressbar.cpp  progressbar.h  sprite.cpp  sprite.h  textbox.cpp  textbox.h  textureloader.h  timer.h  userinterface.cpp  userinterface.h
vnvita-win/: vnvita-win.sln
vnvita-win/Debug/: vnvita-win.exp  vnvita-win.ilk  vnvita-win.lib
vnvita-win/vnvita-win/: main.cpp  vnvita-win.vcxproj
vnvita-win/vnvita-win/Debug/: vc140.idb
vnvita-win/vnvita-win/Debug/vnvita-win.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vnvita-win.lastbuildstate  vnvita-win.write.1u.tlog
(+1 files in other folders)
